@@ -4,14 +4,14 @@
 DYNAMIC RELOCATION RECORDS
 OFFSET   TYPE              VALUE 
 00000000 R_MIPS_NONE       \*ABS\*
-001495b0 R_MIPS_TLS_DTPMOD32  \*ABS\*
 0013f928 R_MIPS_TLS_DTPMOD32  \*ABS\*
-001495bc R_MIPS_TLS_DTPMOD32  tlsvar_gd
-001495c0 R_MIPS_TLS_DTPREL32  tlsvar_gd
+001495b0 R_MIPS_TLS_DTPMOD32  \*ABS\*
 0013f934 R_MIPS_TLS_DTPMOD32  tlsvar_gd
 0013f938 R_MIPS_TLS_DTPREL32  tlsvar_gd
-001495b8 R_MIPS_TLS_TPREL32  tlsvar_ie
+001495bc R_MIPS_TLS_DTPMOD32  tlsvar_gd
+001495c0 R_MIPS_TLS_DTPREL32  tlsvar_gd
 0013f930 R_MIPS_TLS_TPREL32  tlsvar_ie
+001495b8 R_MIPS_TLS_TPREL32  tlsvar_ie
 00143f5c R_MIPS_REL32      sym_1_9526
 #...
 00139bb0 R_MIPS_REL32      sym_2_8654
