@@ -4,9 +4,9 @@
 DYNAMIC RELOCATION RECORDS
 OFFSET   TYPE              VALUE 
 00000000 R_MIPS_NONE       \*ABS\*
-000403bc R_MIPS_TLS_DTPMOD32  \*ABS\*
-000403b4 R_MIPS_TLS_DTPMOD32  \*ABS\*
 000403b0 R_MIPS_TLS_TPREL32  \*ABS\*
+000403b4 R_MIPS_TLS_DTPMOD32  \*ABS\*
+000403bc R_MIPS_TLS_DTPMOD32  \*ABS\*
 
 
 Contents of section .got:
